# hydroponic_python

./: CROPGRO_IMPLEMENTATION_PLAN.md  README.md  STRESS_CALCULATION_FIXES.md  analysis_tools.py  app.py  batch_simulation.py  create_experiment.py  cropgro_cli.py  cropgro_config.json  dynamic_hydroponic_45day.py  fortran_exact_match.py  fortran_validation.py  hydroponic_demo_quick.py  hydroponic_main.py  hydroponic_root_science_simulation.py  hydroponic_simulator_interactive.py  notes.txt  requirements.txt  run_simulation_LET_EXP001_2024.sh  scientific_hydroponic_simulation.py  test_environmental_control.py  test_integration.json  test_maturity_simulation.py  test_output.csv  test_web_api.py
docs/: COMPREHENSIVE_TECHNICAL_DOCUMENTATION.md  MATHEMATICAL_FORMULATIONS.md  MODEL_ARCHITECTURE.md  RESEARCH_BIBLIOGRAPHY.md  ROOT_ARCHITECTURE_LITERATURE_REVIEW.md
examples/: complete_system_demonstration.py  genetic_parameters_demonstration.py  how_to_use_cropgro_simulator.py  system_demonstration.py
input/: BAS_EXP001_2024_model_constants.csv  BAS_EXP001_2024_photosynthesis_parameters.csv  BAS_EXP001_2024_weather.csv  LET_EXP001_2024_crop_parameters.csv  LET_EXP001_2024_genetic_stress_weights.csv  LET_EXP001_2024_nutrient_solution.csv  LET_EXP001_2024_phenology_parameters.csv  (+16 more)
qt_ui/: CMakeLists.txt  README.md  build.bat  build.sh  csvtablemodel.cpp  csvtablemodel.h  csvtableview.cpp  csvtableview.h  hierarchicalfilemodel.cpp  hierarchicalfilemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  run_simulation_LET_EXP001_2024.sh  timeseriesplotwidget.cpp  timeseriesplotwidget.h
(+77 files in other folders)
